# hyram

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.txt  MANIFEST.in  README.md  THIRD-PARTY-LICENSES.txt  pyproject.toml
gui/: .gitignore  pyproject.toml  requirements.txt
gui/src/hyramgui/: HyRAM.pyproject  app_settings.py  main.py  utils.py
gui/src/hyramgui/forms/: app.py  fields.py  results.py
gui/src/hyramgui/hygu/: .gitignore  displays.py  global_settings.py  threads.py
gui/src/hyramgui/models/: analyses.py  enums.py  fields.py  models.py  qra_analyses.py  species.py  units.py
gui/src/hyramgui/tests/: runner.py
gui/src/hyramgui/ui/: QraForm.qml  QraResultPage.qml  SettingsPage.qml  StateForm.qml  main.qml
src/hyram/: CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.cfg  setup.py
src/hyram/hyram/: __init__.py
src/hyram/hyram/phys/: __init__.py  _comps.py  _flame.py  _flame_old.py  _flux.py  _fuel_props.py  _indoor_release.py  _jet.py  _layer.py  _nn.py  _notional_nozzle.py  _overpressure.py  _overpressure_data.py  _plots.py  _positions.py  _therm.py  _unconfined_overpressure.py  _utils.py  api.py  c_api.py
src/hyram/hyram/qra/: __init__.py  _utils.py  analysis.py  c_api.py  component_failure.py  component_set.py  components.py  consequence.py  distributions.py  effects.py  event_tree.py  fatalities.py  flame_data.py  ignition_probs.py  leak_frequency.py  leak_size_results.py  leaks.py  occupants.py  pipe_size.py  positions.py  probit.py  probits.py  risk.py
src/hyram/hyram/utilities/: __init__.py  c_utils.py  constants.py  custom_warnings.py  exceptions.py  misc_utils.py
src/hyram/phys/: __init__.py  _comps.py  _flame.py  _fuel_props.py  _indoor_release.py  _jet.py  _layer.py  _notional_nozzle.py  _overpressure_data.py  _plots.py  _therm.py  _unconfined_overpressure.py  _utils.py  api.py
src/hyram/qra/: __init__.py  _utils.py  analysis.py  component.py  component_failure.py  component_set.py  consequence.py  distributions.py  effects.py  event_tree.py  ignition_probs.py  leak_size_results.py  leaks.py  pipe_size.py  positions.py  probits.py  risk.py  uncertainty.py
src/hyram/qra/data/: component_data.py
src/hyram/qra/defaults/: __init__.py  component_counts.py  component_leak_frequencies.py  dispenser_failures.py
src/hyram/qra/uq/: __init__.py  distributions.py  parallel_evaluations.py  sampling.py
src/hyram/tests/: runner.py  test_api_flux.py  test_api_overpressure.py  test_c_api_etk.py  test_c_api_jet_plume.py  test_c_api_overpressure.py  test_c_api_phys.py  test_c_api_qra.py  test_overpressure.py  test_phys_api.py  test_phys_flame.py  test_phys_fluid.py  test_phys_jet.py  test_phys_overpressure.py  test_phys_plots.py  test_phys_therm.py  test_phys_utils.py  test_qra_analysis.py  test_qra_blends.py  test_qra_consequence.py  test_qra_effects.py  test_qra_event_tree.py  test_qra_fatalities.py  test_qra_ignition_probs.py  test_qra_leak.py  test_qra_pipe_size.py  test_qra_positions.py  test_qra_probits.py  test_qra_risk.py  test_validation_blowdown.py  test_validation_cryo.py  test_validation_cryo_concentrations.py  test_validation_heatflux.py  test_validation_jetplume.py  test_validation_overpressure_accumulation.py  utils.py
src/hyram/tests/data/: Limits-blowdown.json  Limits-cryo.json  Limits-cryo_concentrations.json  Limits-heatflux.json  Limits-jetplume.json  Limits-overpressure_accumulation.json  Molkov2012BookData.csv  bernardmichelhoussinagbomson-2017-fig9.csv  ekoto-2012-fig14.csv  ekoto-2012-fig3.csv  ekoto-2012-fig9.csv  friedrich-fig5.csv  han-2013-fig3a.csv  han-2013-fig3b.csv  han-2013-fig3c.csv  han-2013-fig3d.csv  han-2013-fig6a.csv  han-2013-fig6b.csv  han-2013-fig6c.csv  han-2013-fig7.csv  han-2013-fig8a.csv  han-2013-fig8b.csv  han-2013-fig8c.csv  han-2013-fig8d.csv  houfschefer-2007-fig5-ADJUSTED.csv  houfschefer-2007-fig5.csv  houfschefer-2007-fig6.csv  houfschefer-2008-fig5.csv  houfschefer-2008-fig8.csv  houfschefer-2008-fig9.csv  merilo-2011-fig8.csv  proust-2011-fig4.csv  proust-2011-fig8.csv  rugglesekoto-2012-fig7.csv  schefer-2006-fig3b.csv  schefer-2007-fig4.csv  (+1 more)
src/hyram/utilities/: __init__.py  custom_warnings.py  misc_utils.py
(+686 files in other folders)
