[metadata]
name = hyram
version = attr: hyram.__version__
author = Brian D. Ehrhart, Cianan Sims, Ethan S. Hecht, Benjamin B. Schroeder, Katrina M. Groth, John T. Reynolds, and Gregory W. Walkup
description = Hydrogen Plus Other Alternative Fuels Risk Assessment Models Python Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hyram.sandia.gov/
license = GNU General Public License v3 (GPLv3)
license_file = ../../COPYING.txt
classifiers = Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python :: 3 :: Only
keywords = hydrogen, methane, propane, flame, plume, jet, overpressure, quantitiave risk assessment, risk

[options]
packages = find:
python_requires = >3.6, <3.11
install_requires = numpy
	matplotlib
	scipy
	coolprop>=6.3
